# cdirstat

./: .gitignore  CMakeLists.txt  README.md
include/: cdirstat.h
src/: argparse.c  argparse.h  commons.c  commons.h  console.c  console.h  errors.h  lib.c
src/_unix/: _console.c
src/_windows/: _argparse.c  _console.c  wstring.c  wstring.h
src/cli/: main.c
test/: test_string.c
test/_windows/: test_wstring.c
tools/: build-detail
